api-gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: api-gateway.local  # URL estática para el API Gateway
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway  # Nombre del servicio
                port:
                  number: 80       # Puerto expuesto por el servicio
